--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maps API</title>
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_WDLc0-lq4i-vBsGcL0EEoyLVyN5LKa0&libraries=places" async defer></script> -->
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=&libraries=places" async defer></script> -->
   </head>
   <body>
     <div id="root"></div>
